# teacupy

./: pyproject.toml
.github/workflows/: continuous-integration.yaml
src/teacupy/: __init__.py  helloworld.py  test_helloworld.py
tests/: __init__.py
